Layout bug fixed

--- a/src/app/pages/missions/missions.css
+++ b/src/app/pages/missions/missions.css
@@ -1,26 +1,3 @@
-.list-title {
-  display: block;
-  width: 100%;
-  height: 45px;
-  text-align: center;
-  padding-top: 8px;
-  background: var(--bg);
-  font-size: 1.4rem;
-  font-weight: 700;
-}
-
-.missions .button-menu {
-  position: absolute;
-  display: block;
-  top: 0;
-  right: 5px;
-  font-size: 1.4rem;
-  padding: 10px;
-  z-index: 10;
-  border: none;
-  background: none;
-}
-
 .missions {
   background-color: var(--bg-ligth);
   width: 100%;
@@ -30,10 +7,40 @@
   justify-content: space-around;
   align-items: center;
   overflow-y: scroll;
+  margin-top: 45px;
+}
+
+.list-title, .missions .button-menu {
+  display: none;
 }
 
 @media (max-width: 450px) {
   .missions {
     height: auto;
+  }
+  .list-title {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 45px;
+    text-align: center;
+    padding-top: 8px;
+    background: var(--bg);
+    font-size: 1.4rem;
+    font-weight: 700;
+  }
+  
+  .missions .button-menu {
+    position: absolute;
+    display: block;
+    top: 0;
+    right: 5px;
+    font-size: 1.4rem;
+    padding: 10px;
+    z-index: 10;
+    border: none;
+    background: none;
   }
 }
