--- a/src/app/templates/main/main.css
+++ b/src/app/templates/main/main.css
@@ -2,7 +2,7 @@
   display: grid;
   margin: 0 auto;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   grid-template-columns: var(--aside-width) 1fr;
   grid-template-rows: var(--header-height) (--content-height);
 
